--- a/.github/workflows/DEPLOY-DEV.yml
+++ b/.github/workflows/DEPLOY-DEV.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Compile Hello.cls into PROD IRIS
+      - name: Compile Hello.cls into DEV IRIS
         run: |
           echo "Running local IRIS compile..."
          C:\Users\aglikman\Documents\MyProjects\Soraski-Ichilov\CI-CD\TEST_HSHC\bin /console=cn_ap:TEST[CICD] C:\Users\aglikman\Documents\MyProjects\Soraski-Ichilov\CI-CD\myscript.scr
